--- a/About Us/AboutUs.html
+++ b/About Us/AboutUs.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
+    <link rel="stylesheet" href="AboutUsStyle.css">
 </head>
 <body>
-    
+    <!-- NavBar Start -->
+    <header>
+        <!-- Insert Logo Company -->
+        <a href="#" class="logo">
+            <img src="/FE-2-surabaya-24/Asset/Logo.png" alt="logo">
+        </a>
+
+        <!-- Menu Icon -->
+        <i class="menu" id="menu-icon"><img src="/FE-2-surabaya-24/Asset/Logo.png" alt=""></i>
+
+        <!-- NavBar Links -->
+        <ul class="navbar">
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#About Us">About Us</a></li>
+            <li><a href="#Product">Product</a></li>
+        </ul>
+    </header>
+    <!-- NavBar End -->
+
+    <!--Section   -->
 </body>
 </html>
