--- a/Product/Product.html
+++ b/Product/Product.html
@@ -21,9 +21,9 @@
 
         <!-- navbar links -->
         <ul class="navbar">
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#About Us">About Us</a></li>
-            <li><a href="#Product">Product</a></li>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="About Us.html">About Us</a></li>
+            <li><a href="Product.html">Product</a></li>
         </ul>
     </header>
         <!-- NavBar END -->
@@ -63,13 +63,6 @@
    </section>
     <!-- Section Description "What is TeavoU?" END -->
 
-
-
-
-
-
-
-    
    <!-- Section TeavoU Product START-->
    <section class="product" id="product">
         <div class="product-text">
