Edit foto grid product

--- a/Product/Product.html
+++ b/Product/Product.html
@@ -30,26 +30,32 @@
 
     <!-- Section Description "What is TeavoU?" START -->
    <section class="desc" id="desc">
-        <div class="grid-wrapper">
-            <div class="desc-img-1">
-                <img src="/Asset/product img 1.png" alt="">
+        <div class="grid">
+            <div class="column">
+                <div class="column-1">
+                    <div class="image-1">
+                        <img src="/Asset/product img 1.png" alt="">
+                    </div> 
+                    <div class="image-2">
+                        <img src="/Asset/product img 2.png" alt="">
+                    </div>
+                </div>
             </div>
-            <div class="desc-img-2">
-                <img src="/Asset/product img 2.png" alt="">
-            </div>   
-            <div class="desc-img-3">
-                <img src="/Asset/product img 3.png" alt="">
-            </div>
-            <div>
-                <img src="/Asset/product img 4.png" alt="">
+            <div class="column">
+                <div class="column-2">
+                    <div class="image-3">
+                        <img src="/Asset/product img 3.png" alt="">
+                    </div>   
+                    <div class="image-4">
+                         <img src="/Asset/product img 4.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
-
         <div class="desc-text">
             <h2>What is <span><br>TeavoU?</span></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
         </div>
-
         <div class="desc-more">
             <button>More</button>
         </div>
