--- a/Home/Home.html
+++ b/Home/Home.html
@@ -29,7 +29,7 @@
     <!-- Home -->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>TeavoU</h1>
+            <h1>Teavo<span>U</span></h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque nihil velit officiis voluptate harum laboriosam error nostrum eum! Ipsa, doloremque ex quo odit tenetur in et iure velit cum est.</p>
         </div>
         <div class="shape"></div>
@@ -37,7 +37,7 @@
             <img src="/Asset/HomeTea.svg" alt="">
         </div>
         <div class="home-GreenTea">
-            <img src="/Asset/GreenTea.png" alt="">
+            <img src="/Asset/Green.svg" alt="">
         </div>
     </section>
 
@@ -205,7 +205,48 @@
 
 <!-- Quiz -->
 <section class="quiz">
+    <h2>Quiz Time</h2>
+    <!-- Tab Links -->
+    <div class="tab">
+        <button class="tablinks" onclick="openTea(event, 'tea1')"><img src="/Asset/tea 1.png" alt="tea1"></button>
 
+        <button class="tablinks" onclick="openTea(event, 'tea2')"><img src="/Asset/tea 2.png" alt="tea2"></button>
+
+        <button class="tablinks" onclick="openTea(event, 'tea3')"><img src="/Asset/tea 3.png" alt="tea3"></button>
+    </div>
+
+    <!-- Tab content -->
+    <div id="tea1" class="tabcontent">
+        <img src="/Asset/tea 1.png" alt="">
+        <div class="box">
+            <h4>SweeTea</h4>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi velit error aut. Dolor quis blanditiis obcaecati amet. Nobis ipsa obcaecati non, temporibus fugit eos sequi, impedit repellat magnam ex quod.</p>
+        <button class="playQuiz">Play</button>
+        </div>
+    </div>
+
+    <div id="tea2" class="tabcontent">
+        <img src="/Asset/tea 2.png" alt="">
+        <div class="box">
+        <h4>Blue Thai Tea</h4>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi velit error aut. Dolor quis blanditiis obcaecati amet. Nobis ipsa obcaecati non, temporibus fugit eos sequi, impedit repellat magnam ex quod.</p>
+        <button class="playQuiz">Play</button>
+    </div>
+    </div>
+
+    <div id="tea3" class="tabcontent">
+        <img src="/Asset/tea 3.png" alt="">
+        <div class="box">
+        <h4>Alga on Ocean</h4>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi velit error aut. Dolor quis blanditiis obcaecati amet. Nobis ipsa obcaecati non, temporibus fugit eos sequi, impedit repellat magnam ex quod.</p>
+        <button class="playQuiz">Play</button>
+    </div>
+
+    </div>
+    <div class="shapeConten"></div>
 </section>
 </main>
 
