--- a/About Us/AboutUs.html
+++ b/About Us/AboutUs.html
@@ -11,11 +11,11 @@
     <header>
         <!-- Insert Logo Company -->
         <a href="#" class="logo">
-            <img src="/FE-2-surabaya-24/Asset/Logo.png" alt="logo">
+            <img src="/Asset/Logo.png" alt="logo">
         </a>
 
         <!-- Menu Icon -->
-        <i class="menu" id="menu-icon"><img src="/FE-2-surabaya-24/Asset/Logo.png" alt=""></i>
+        <i class="menu" id="menu-icon"><img src="/Asset/menu.svg" alt=""></i>
 
         <!-- NavBar Links -->
         <ul class="navbar">
@@ -26,6 +26,88 @@
     </header>
     <!-- NavBar End -->
 
-    <!--Section   -->
+    <!--Section profileupper "About US TeavoU" Start  -->
+    <section class="profileupper" id="profileupper">
+        <div class="profileupper-text">
+            <h1>About Us<span><br>TeavoU</span></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+        </div>
+        <div class="bgprofileupper">
+            <img src="/Asset/bgprofilupper.png" alt="">
+        </div>
+        <div class="profileupper-img-1">
+            <img src="/Asset/aboutupper img 1.png" alt="">
+        </div>
+        <div class="profileupper-img-2">
+            <img src="/Asset/aboutupper img 2.png" alt="">
+        </div>
+        <div class="profileupper-bubukteh">
+            <img src="/Asset/bubuk teh.png" alt="">
+        </div>
+
+    </section>
+    <!-- Section profileupper "About US TeavoU" End-->
+    
+    <!-- Section profilecentre Start -->
+    <section class="profilecentre" id="profilecentre">
+        <div class="leftcolumn">
+            <div class="profilecentrecard">
+                <div class="profilecentre-img">
+                    <img src="/Asset/isi about.png" alt="">
+                </div>
+                <div class="profilecentre-img">
+                    <img src="/Asset/isi about 2.png" alt="">
+                </div>
+                <div class="profilecentre-img">
+                    <img src="/Asset/isi about 3.png" alt="">
+                </div>
+                <div class="profilecentre-img">
+                    <img src="/Asset/isi about 4.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="right column">
+            <div class="profilecentrecard">
+                <h3>About <span>Us</span></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+            </div>
+            <div class="profilecentrecard">
+                <h3>Value in <span>TeavoU</span></h3>
+                
+                <ol>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                </ol>  
+            </div>
+        </div>
+    </section>
+    <!-- Section profilecentre End -->
+
+    <!-- Section TeavoUTeam Start -->
+    <section class="TeavoUTeam" id="TeavoUTeam">
+        <div class="TeavoUTeamcard">
+            <h4><span>TeavoU</span> Team</h4>
+        </div>
+    </section>
+    <!-- Section TevoUTeam End -->
+
+    <!-- Section Tevou Gallery Start -->
+    <section class="TeavoUGallery" id="TeavoUGallery">
+        <div class="column">
+            <div class="TeavoUGallerycard">
+                <h4>TeavoU <span>Gallery</span></h4>
+                <div class="TeavoUGallery-img">
+                    <img src="/Asset/Galeryabout 1.png" alt="">
+                </div>
+                <div class="TeavoUGallery-img">
+                    <img src="/Asset/Galeryabout 2.png" alt="">
+                </div>
+                <div class="TeavoUGallery-img">
+                    <img src="/Asset/Galeryabout 3.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
