--- a/Product/Product.html
+++ b/Product/Product.html
@@ -63,8 +63,8 @@
         <!-- 3 buttons navigate on product page -->
         <div class="buttons">
             <button class="but"><img src="/Asset/image deskripsi teh.svg" alt="">What is TeavoU?</button>
-            <button class="but"><img src="/Asset/image sejarah tea.svg" alt=""> History of Tea</button>
-            <button class="but"><img src="/Asset/image khasiat tea.svg" alt=""> TeavoU Product</button>
+            <button class="but"><img src="/Asset/image sejarah tea.svg" alt="">History of Tea</button>
+            <button class="but"><img src="/Asset/image khasiat tea.svg" alt="">TeavoU Product</button>
         </div>
    </section>
     <!-- Section Description "What is TeavoU?" END -->
@@ -134,6 +134,28 @@
                 <h5>Blue Thai Tea</h5>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum sunt sit modi ipsum delectus atque harum dolorem expedita et tempora aspernatur totam doloribus, qui, optio laboriosam officiis nemo maxime consequatur.</p>
                 <button class="read">Read More</button>
+            </div>
+        </div>
+
+        <!-- Feedback -->
+        <div class="feedback">
+            <p>Give us your feedback on our products</p><br>
+            <div class="form">
+                <form action="" name="feedback-form">
+                    <div class="input-feedback">
+                        <input type="text" name="Type here ..." placeholder="Type here ...">
+                    </div>
+                    <div class="button-submit">
+                        <input type="submit" value="submit">
+                    </div>
+                </form>
+            </div>
+            <div class="star-rating">
+                <button class="star">&#9734;</button>
+                <button class="star">&#9734;</button>
+                <button class="star">&#9734;</button>
+                <button class="star">&#9734;</button>
+                <button class="star">&#9734;</button>
             </div>
         </div>
    </section>
