--- a/About Us/AboutUs.html
+++ b/About Us/AboutUs.html
@@ -19,9 +19,9 @@
 
         <!-- NavBar Links -->
         <ul class="navbar">
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#About Us">About Us</a></li>
-            <li><a href="#Product">Product</a></li>
+            <li><a href="/Home.html">Home</a></li>
+            <li><a href="/About Us/AboutUs.html">About Us</a></li>
+            <li><a href="/Product/Product.html">Product</a></li>
         </ul>
     </header>
     <!-- NavBar End -->
