--- a/Product/Product.html
+++ b/Product/Product.html
@@ -21,9 +21,9 @@
 
         <!-- navbar links -->
         <ul class="navbar">
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="About Us.html">About Us</a></li>
-            <li class="active_nav"><a href="Product.html">Product</a></li>
+            <li><a href="/Home.html">Home</a></li>
+            <li><a href="/About Us/AboutUs.html">About Us</a></li>
+            <li class="active_nav"><a href="/Product/Product.html">Product</a></li>
         </ul>
     </header>
         <!-- NavBar END -->
