--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
-    <link rel="stylesheet" href="AboutUsStyle.css">
+    <link rel="stylesheet" href="About Us/AboutUsStyle.css">
 </head>
 <body>
     <!-- NavBar Start -->
     <header>
         <!-- Insert Logo Company -->
         <a href="#" class="logo">
-            <img src="/Asset/Logo.png" alt="logo">
+            <img src="Asset/Logo.png" alt="logo">
         </a>
 
         <!-- Menu Icon -->
-        <i class="menu" id="menu-icon"><img src="/Asset/menu.svg" alt=""></i>
+        <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt=""></i>
 
         <!-- NavBar Links -->
         <ul class="navbar">
-            <li><a href="/Home.html">Home</a></li>
-            <li><a href="/About Us/AboutUs.html">About Us</a></li>
-            <li><a href="/Product/Product.html">Product</a></li>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="About Us/AboutUs.html">About Us</a></li>
+            <li><a href="Product/Product.html">Product</a></li>
         </ul>
     </header>
     <!-- NavBar End -->
@@ -33,13 +33,13 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
         </div>
         <div class="bgprofileupper">
-            <img src="/Asset/bgprofilupper.png" alt="">
+            <img src="Asset/bgprofilupper.png" alt="">
         </div>
         <div class="profileupper-img-1">
-            <img src="/Asset/aboutupper img 1.png" alt="">
+            <img src="Asset/aboutupper img 1.png" alt="">
         </div>
         <div class="profileupper-img-2">
-            <img src="/Asset/aboutupper img 2.png" alt="">
+            <img src="Asset/aboutupper img 2.png" alt="">
         </div>
         <div class="profileupper-bubukteh">
             <img src="/Asset/bubuk teh.png" alt="">
@@ -53,16 +53,16 @@
         <div class="leftcolumn">
             <div class="profilecentrecard">
                 <div class="profilecentre-img">
-                    <img src="/Asset/isi about.png" alt="">
+                    <img src="Asset/isi about.png" alt="">
                 </div>
                 <div class="profilecentre-img">
-                    <img src="/Asset/isi about 2.png" alt="">
+                    <img src="Asset/isi about 2.png" alt="">
                 </div>
                 <div class="profilecentre-img">
-                    <img src="/Asset/isi about 3.png" alt="">
+                    <img src="Asset/isi about 3.png" alt="">
                 </div>
                 <div class="profilecentre-img">
-                    <img src="/Asset/isi about 4.png" alt="">
+                    <img src="Asset/isi about 4.png" alt="">
                 </div>
             </div>
         </div>
@@ -98,13 +98,13 @@
             <div class="TeavoUGallerycard">
                 <h4>TeavoU <span>Gallery</span></h4>
                 <div class="TeavoUGallery-img">
-                    <img src="/Asset/Galeryabout 1.png" alt="">
+                    <img src="Asset/Galeryabout 1.png" alt="">
                 </div>
                 <div class="TeavoUGallery-img">
-                    <img src="/Asset/Galeryabout 2.png" alt="">
+                    <img src="Asset/Galeryabout 2.png" alt="">
                 </div>
                 <div class="TeavoUGallery-img">
-                    <img src="/Asset/Galeryabout 3.png" alt="">
+                    <img src="Asset/Galeryabout 3.png" alt="">
                 </div>
             </div>
         </div>
