--- a/AboutUs.html
+++ b/AboutUs.html
@@ -20,8 +20,8 @@
         <!-- NavBar Links -->
         <ul class="navbar">
             <li><a href="Home.html">Home</a></li>
-            <li><a href="About Us/AboutUs.html">About Us</a></li>
-            <li><a href="Product/Product.html">Product</a></li>
+            <li class="active_nav"><a href="AboutUs.html">About Us</a></li>
+            <li><a href="Product.html">Product</a></li>
         </ul>
     </header>
     <!-- NavBar End -->
