--- a/Home.html
+++ b/Home.html
@@ -20,8 +20,8 @@
     <!-- Links -->
     <ul class="navbar">
         <li class="active_nav"><a href="#Home">Home</a></li>
-        <li><a href="About Us/AboutUs.html">AboutUs</a></li>
-        <li><a href="Product/Product.html">Product</a></li>
+        <li><a href="AboutUs.html">AboutUs</a></li>
+        <li><a href="Product.html">Product</a></li>
     </ul>
     </header>
 
