--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
     <link rel="stylesheet" href="About Us/AboutUsStyle.css">
+    <link rel="icon" href="Asset/Logo.png" type="image/x-icon">
 </head>
 <body>
     <!-- NavBar Start -->
@@ -32,17 +33,16 @@
             <h1>About Us<span><br>TeavoU</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
         </div>
-        <div class="bgprofileupper">
-            <img src="Asset/bgprofilupper.png" alt="">
-        </div>
-        <div class="profileupper-img-1">
-            <img src="Asset/aboutupper img 1.png" alt="">
-        </div>
-        <div class="profileupper-img-2">
-            <img src="Asset/aboutupper img 2.png" alt="">
+        <div class="right column">
+            <div class="profileupper-img-1">
+                <img src="Asset/aboutupper img 1.png" alt="">
+            </div>
+            <div class="profileupper-img-2">
+                <img src="Asset/aboutupper img 2.png" alt="">
+            </div>
         </div>
         <div class="profileupper-bubukteh">
-            <img src="/Asset/bubuk teh.png" alt="">
+            <img src="Asset/bubuk teh.png" alt="">
         </div>
 
     </section>
@@ -51,18 +51,26 @@
     <!-- Section profilecentre Start -->
     <section class="profilecentre" id="profilecentre">
         <div class="leftcolumn">
-            <div class="profilecentrecard">
-                <div class="profilecentre-img">
-                    <img src="Asset/isi about.png" alt="">
+           <div class="grid">
+                <div class="column">
+                    <div class= "column-1">
+                        <div class="image-1">
+                            <img src="Asset/isi about.png" alt="">
+                        </div> 
+                        <div class="image-2">
+                            <img src="Asset/isi about 2.png" alt="">
+                        </div>
+                    </div>
                 </div>
-                <div class="profilecentre-img">
-                    <img src="Asset/isi about 2.png" alt="">
-                </div>
-                <div class="profilecentre-img">
-                    <img src="Asset/isi about 3.png" alt="">
-                </div>
-                <div class="profilecentre-img">
-                    <img src="Asset/isi about 4.png" alt="">
+                <div class="column">
+                    <div class="column-2">
+                        <div class="image-3">
+                            <img src="Asset/isi about 3.png" alt="">
+                        </div>   
+                        <div class="image-4">
+                             <img src="Asset/isi about 4.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -75,9 +83,9 @@
                 <h3>Value in <span>TeavoU</span></h3>
                 
                 <ol>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li><span class="number1">1</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li><span class="number2">2</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li><span class="number1">3</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                 </ol>  
             </div>
         </div>
