add another menu

--- a/Product.html
+++ b/Product.html
@@ -83,72 +83,209 @@
         </div>
         
         <!-- TeavoU Product or Menu-->
-        <div class="menu">
-            <div class="content">
-                <img src="Asset/tea 1.png" alt="">
-                <h5>Butterfly Pea Elixir</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+         <!-- SweeTea -->
+        <div class="sweetea">
+            <div class="menu">
+                <div class="content">
+                    <img src="Asset/tea 1.png" alt="">
+                    <h5>Butterfly Pea Elixir</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
                 </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
+                <div class="content">
+                    <img src="Asset/tea 2.png" alt="">
+                    <h5>Blue Thai Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/tea 3.png" alt="">
+                    <h5>Alga on Ocean</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/tea 1.png" alt="">
+                    <h5>Butterfly Pea Elixir</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
             </div>
-            
-            <div class="content">
-                <img src="Asset/tea 2.png" alt="">
-                <h5>Blue Thai Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            <div class="menu">
+                <div class="content">
+                    <img src="Asset/tea 2.png" alt="">
+                    <h5>Blue Thai Tea</h5>
+                    <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
+                    <button class="read" onclick="expandText(this)">Read More</button>
                 </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-            <div class="content">
-                <img src="Asset/tea 3.png" alt="">
-                <h5>Alga on Ocean</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <div class="content">
+                    <img src="Asset/tea 3.png" alt="">
+                    <h5>Alga On Ocean</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
                 </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-
-            <div class="content">
-                <img src="Asset/tea 1.png" alt="">
-                <h5>Butterfly Pea Elixir</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <div class="content">
+                    <img src="Asset/tea 1.png" alt="">
+                    <h5>Butterfly Pea Elixir</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
                 </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
+                <div class="content">
+                    <img src="Asset/tea 2.png" alt="">
+                    <h5>Blue Thai Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+            </div>    
         </div>
+        <!-- Origin Tea -->
+        <div class="origin">
+            <div class="menu">
+                <div class="content">
+                    <img src="Asset/greentea.png" alt="">
+                    <h5>Green Tea</h5>
+                    <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/oolong tea.png" alt="">
+                    <h5>Oolong Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/white tea.png" alt="">
+                    <h5>White Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/black tea.png" alt="">
+                    <h5>Black Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+            </div>
 
-        <div class="menu">
-            <div class="content">
-                <img src="Asset/tea 2.png" alt="">
-                <h5>Blue Thai Tea</h5>
-                <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-            <div class="content">
-                <img src="Asset/tea 3.png" alt="">
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            <div class="menu">
+                <div class="content">
+                    <img src="Asset/greentea.png" alt="">
+                    <h5>Green Tea</h5>
+                    <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
+                    <button class="read" onclick="expandText(this)">Read More</button>
                 </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
-            </div>
-            <div class="content">
-                <img src="Asset/tea 1.png" alt="">
-                <h5>Butterfly Pea Elixir</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <div class="content">
+                    <img src="Asset/oolong tea.png" alt="">
+                    <h5>Oolong Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
                 </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
+                <div class="content">
+                    <img src="Asset/white tea.png" alt="">
+                    <h5>White Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/black tea.png" alt="">
+                    <h5>Black Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+            </div>    
+        </div>
+        <!-- Tisane -->
+        <div class="tisane">
+            <div class="menu">
+                <div class="content">
+                    <img src="Asset/Chamomile Tea.png" alt="">
+                    <h5>Chamomile Tea</h5>
+                    <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/Spearmint tea.png" alt="">
+                    <h5>Spearmint Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/Moringa Tea.png" alt="">
+                    <h5>Moringa Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/Peppermint Tea.png" alt="">
+                    <h5>Peppermint Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
             </div>
 
-            <div class="content">
-                <img src="Asset/tea 2.png" alt="">
-                <h5>Blue Thai Tea</h5>
-                <div class="text-wrapper">
-                    <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+            <div class="menu">
+                <div class="content">
+                    <img src="Asset/lemongrass.png" alt="">
+                    <h5>Lemongrass Tea</h5>
+                    <p class="truncate">Lorem ipsum dolor sit, amet consectetur adipisicing elit...</p>
+                    <button class="read" onclick="expandText(this)">Read More</button>
                 </div>
-                <button class="read" onclick="expandText(this)">Read More</button>
+                <div class="content">
+                    <img src="Asset/rosella tea.png" alt="">
+                    <h5>Rosella Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/rosebud.png" alt="">
+                    <h5>Rose Buds Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+                <div class="content">
+                    <img src="Asset/jasmine.png" alt="">
+                    <h5>Jasmine Tea</h5>
+                    <div class="text-wrapper">
+                        <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                    </div>
+                    <button class="read" onclick="expandText(this)">Read More</button>
+                </div>
+            </div>
         </div>
 
         <!-- Feedback -->
@@ -158,8 +295,6 @@
                 <form action="" name="feedback-form">
                     <div class="input-feedback">
                         <input type="text" name="Type here ..." placeholder="Type here ...">
-                    </div>
-                    <div class="button-submit">
                         <input type="submit" value="submit">
                     </div>
                 </form>
