remove best product

--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,36 @@
         </div>
     </section>
 
+    <!-- Best Seller -->
+    <section class="best-product">
+        <div class="best-text">
+            <h2>Products Best Seller</h2>
+        </div>
+
+        <div class="grid-container">
+            <div class="item1">
+                <h3>Origin <br>
+                    <span>Tea</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sed odit mollitia nemo recusandae distinctio adipisci ipsam officiis, laborum eaque reprehenderit aliquam nobis. Pariatur quam totam sed facilis ex nostrum.</p>
+                <div class="label-best">Best Seller</div>
+            </div>
+
+            <div class="item2">
+                <h3>Green Tea <br>
+                    <span>Tea</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                <div class="labe2-best">Best Seller</div>
+            </div>
+            <div class="item3">
+                <h3>Blue <span>Thai</span> <br>
+                    <span class="Tea3">Tea</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Pariatur quam totam sed facilis ex nostrum.</p>
+                <div class="labe3-best">Best Seller</div>
+            </div>
+          </div>
+    </section>
+
     <!-- Products Best Seller -->
     <section class="best" id="best">
         <div class="best-text">
@@ -48,22 +78,13 @@
         </div>
         <div class="slideshow">
             <div class="slide">
-          
-                    <img src="Asset/TeaBest.svg" alt="Image 1">
-       
-
-                <img src="Asset/TeaBest.svg" alt="Image 2">
                 <img src="Asset/TeaBest.svg" alt="Image 3">
             </div>
             <div class="slide">
                 <img src="Asset/bestTea.svg" alt="Image 4">
-                <img src="Asset/bestTea.svg" alt="Image 5">
-                <img src="Asset/bestTea.svg" alt="Image 6">
             </div>
             <div class="slide">
                 <img src="Asset/GreenBest.svg" alt="Image 4">
-                <img src="Asset/GreenBest.svg" alt="Image 5">
-                <img src="Asset/GreenBest.svg" alt="Image 6">
             </div>
         </div>
         <div class="dots">
