update team tevou

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -20,7 +20,7 @@
 
         <!-- NavBar Links -->
         <ul class="navbar">
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li class="active_nav"><a href="AboutUs.html">About Us</a></li>
             <li><a href="Product.html">Product</a></li>
         </ul>
@@ -33,12 +33,18 @@
             <h1>About Us<span><br>TeavoU</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
         </div>
-        <div class="right column">
-            <div class="profileupper-img-1">
-                <img src="Asset/aboutupper img 1.png" alt="">
-            </div>
-            <div class="profileupper-img-2">
-                <img src="Asset/aboutupper img 2.png" alt="">
+        <div class="grid">
+            <div class="column">
+                <div class="column-1">
+                    <div class="profileupper-img-1">
+                        <img src="Asset/aboutupper img 1.png" alt="">
+                    </div>
+                </div>
+                <div class="column-2">
+                    <div class="profileupper-img-2">
+                        <img src="Asset/aboutupper img 2.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="profileupper-bubukteh">
@@ -94,8 +100,20 @@
 
     <!-- Section TeavoUTeam Start -->
     <section class="TeavoUTeam" id="TeavoUTeam">
+        <h4><span>TeavoU</span> Team</h4>
         <div class="TeavoUTeamcard">
-            <h4><span>TeavoU</span> Team</h4>
+            <div><img src="Asset/team rifqi.png" alt="">Lorem ipsum
+            </div>
+            <div><img src="Asset/team fadhel.png" alt="">Akhmad Fadhel
+            </div>
+            <div><img src="Asset/team rifqi.png" alt="">Lorem ipsum
+            </div>
+            <div><img src="Asset/team diah.png" alt="">I Gusti Agung Diah<br>Arishma Okayani
+            </div>
+            <div><img src="Asset/team rifqi.png" alt="">Rifqi Nur Permadi
+            </div>
+            <div><img src="Asset/team rifqi.png" alt="">Lorem ipsum
+            </div>
         </div>
     </section>
     <!-- Section TevoUTeam End -->
