--- a/history.html
+++ b/history.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History About Tea</title>
-    <link rel="stylesheet" href="historystyle.css">
+    <link rel="stylesheet" href="History/historystyle.css">
     
 </head>
 <body>
-    <!-- Navbar -->
+    <!-- NavBar Start -->
     <header>
-    <a href="#" class="logo">
-        <img src="/FE-2-surabaya-24/Asset/Logo.png" alt="">
-    </a>
+      <!-- insert logo -->
+      <a href="#" class="logo">
+          <img src="Asset/Logo.png" alt="logo">
+      </a>
+
+      <!-- menu icon -->
+      <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt=""></i>
+
+      <!-- navbar links -->
+      <ul class="navbar">
+          <li><a href="Home.html">Home</a></li>
+          <li><a href="AboutUs.html">About Us</a></li>
+          <!-- <li class="active_nav"><a href="Product.html">Product</a></li> -->
+          <li><a href="Product.html">Product</a></li>
+      </ul>
+     </header>
+      <!-- NavBar END -->
 
     <!-- Links -->
     <ul class="navbar">
@@ -24,8 +38,16 @@
 
     <!-- BG Top Section -->
     <section class="bg-sections">
-        <img src="/FE-2-surabaya-24/Asset/history_img1.png" alt="Tea Story" />
-    </section>
+        <img src="Asset/history_img1.png" alt="Tea Story" />
+ 
+     <!-- 3 buttons navigate on product page -->
+    <div class="buttons">
+        <button class="but"><img src="Asset/image deskripsi teh.svg" alt="">What is TeavoU?</button>
+        <button class="but"><img src="Asset/image sejarah tea.svg" alt="">History of Tea</button>
+        <button class="but"><img src="Asset/image khasiat tea.svg" alt="">TeavoU Product</button>
+    </div>
+ </section>
+  <!-- Section BG Top Section END -->
 
     <!-- Features Section -->
     <section class="features-sections">
@@ -34,10 +56,48 @@
         </div>
     </section>
 
+        <!--History1 Section -->
+        <section class="history-sections">
+          <div class="history-sections__container">
+            <img src="Asset/history_sejarah1.png" alt="The Magical Beginning" />
+            <div class="history-layout">
+              <svg xmlns="http://www.w3.org/2000/svg" width="120" height="2" viewBox="0 0 157 3" fill="none" gap="23">
+                  <path d="M0 1.5H157" stroke="grey" stroke-width="2"/>
+                </svg>
+              <h6>3000 BC: The Magical Beginning</h6>
+              <h7>Tea is believed to have been first discovered in ancient China around 3000 BC. Legend has it that a wise emperor, Shen Nong, accidentally stumbled upon tea when tea leaves fell into boiling water. And thus, tea was born.</h7>
+              <svg xmlns="http://www.w3.org/2000/svg" width="120" height="2" viewBox="0 0 157 3" fill="none" gap="23">
+                <path d="M0 1.5H157" stroke="grey" stroke-width="2"/>
+              </svg>
+            <h6>8th Century: Tea in Japan</h6>
+            <h7>In the 8th century, tea started to make its way to Japan, and its influence quickly permeated Japanese culture and traditions. This marked the emergence of the profound Japanese tea ceremony known as "Chanoyu" or "Sado."</h7>
+            </div>
+          </div>
+      </section>
+
+      <!--History2 Section -->
+        <section class="history2-sections">
+          <div class="history2-sections__container">
+            <img src="Asset/history_sejarah2.png" alt="The Magical Beginning" />
+            <div class="history2-layout">
+              <svg xmlns="http://www.w3.org/2000/svg" width="120" height="2" viewBox="0 0 157 3" fill="none" gap="23">
+                  <path d="M0 1.5H157" stroke="grey" stroke-width="2"/>
+                </svg>
+              <h6>17th Century: Tea in Europe</h6>
+              <h7>The 17th century saw tea arriving in Europe, breathing a breath of fresh air into tea-drinking culture. England, in particular, developed its obsession with tea, giving birth to the famous "afternoon tea" tradition.</h7>
+              <svg xmlns="http://www.w3.org/2000/svg" width="120" height="2" viewBox="0 0 157 3" fill="none" gap="23">
+                <path d="M0 1.5H157" stroke="grey" stroke-width="2"/>
+              </svg>
+            <h6>18th Century: The Global Tea Trade</h6>
+            <h7>The 18th century was an era when global tea trade began to thrive. Tea became a valuable commodity in international trade, bringing wealth and prosperity to numerous tea companies.</h7>
+            </div>
+          </div>
+      </section>
+
     <!--TeavoU Section -->
     <section class="teavou-sections">
         <div class="teavou-sections__container">
-          <img src="/FE-2-surabaya-24/Asset/history_img4.png" alt="History of Tea" />
+          <img src="Asset/history_img4.png" alt="History of Tea" />
           <div class="teavou-layout">
             <svg xmlns="http://www.w3.org/2000/svg" width="157" height="3" viewBox="0 0 157 3" fill="none" gap="23">
                 <path d="M0 1.5H157" stroke="white" stroke-width="2"/>
@@ -51,7 +111,7 @@
         <!-- Footer -->
         <footer>
             <div class="">
-              <img src="/FE-2-surabaya-24/Asset/Logo.png" alt="Logo" />
+              <img src="Asset/Logo.png" alt="Logo" />
             </div>
           </footer>
           <!-- Footer -->
