--- a/history.html
+++ b/history.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>History About Tea</title>
     <link rel="stylesheet" href="History/historystyle.css">
     
@@ -42,9 +42,9 @@
  
      <!-- 3 buttons navigate on product page -->
     <div class="buttons">
-        <button class="but"><img src="Asset/image deskripsi teh.svg" alt="">What is TeavoU?</button>
-        <button class="but"><img src="Asset/image sejarah tea.svg" alt="">History of Tea</button>
-        <button class="but"><img src="Asset/image khasiat tea.svg" alt="">TeavoU Product</button>
+        <button onclick="window.location.href='AboutUs.html'" class="but"><img src="Asset/image deskripsi teh.svg" alt="">What is TeavoU?</button>
+        <button onclick="window.location.href='history.html'" class="but"><img src="Asset/image sejarah tea.svg" alt="">History of Tea</button>
+        <button onclick="window.location.href='Product.html'" class="but"><img src="Asset/image khasiat tea.svg" alt="">TeavoU Product</button>
     </div>
  </section>
   <!-- Section BG Top Section END -->
