--- a/Index.html
+++ b/Index.html
@@ -273,14 +273,23 @@
 
 <footer>
     <div class="bg-fo">
-        <img src="Asset/Logo.png" alt="wh-lo">
+        <img src="Asset/whiteLogo.svg" alt="wh-lo">
 
         <div class="element-fo">
             <!-- alamat -->
             <div class="alamat">
-                <!-- logo alamat -->
+                <!-- <img src="Asset/Vector (1).svg" alt=""> -->
                 <h5>Jl.Cenderawasih No3, Mrican Caturtunggal</h5>
             </div>
+
+            <!-- Line navbar -->
+        <div class="line"></div>
+            <ul class="navbar-bawah">
+                <li><a href="#Home">Home</a></li>
+                <li><a href="AboutUs.html">AboutUs</a></li>
+                <li><a href="Product.html">Product</a></li>
+            </ul>
+        
 
             <!-- email -->
             <div class="email">
